[gd_scene load_steps=10 format=3 uid="uid://djnomncx1otsq"]

[ext_resource type="Script" uid="uid://bs2b8lb5xbqm3" path="res://src/systems/utils/seamless_detector.gd" id="1_ytyvq"]
[ext_resource type="Shader" uid="uid://bj1hwolvcnwpg" path="res://src/shaders/screen_texture.gdshader" id="2_x4sw1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xc3k"]
size = Vector2(480, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4sw1"]
size = Vector2(480, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjes7"]
size = Vector2(16, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tonw3"]
size = Vector2(16, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pjes7"]
shader = ExtResource("2_x4sw1")
shader_parameter/offset = Vector2(-272, 0)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_x4sw1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x4sw1"]
shader = ExtResource("2_x4sw1")
shader_parameter/offset = Vector2(272, 0)

[node name="seamless_detector" type="Node2D" node_paths=PackedStringArray("right_overshoot_view", "left_overshoot_view")]
script = ExtResource("1_ytyvq")
right_overshoot_view = NodePath("right_overshoot")
left_overshoot_view = NodePath("left_overshoot")
boundary_size = Vector2i(480, 256)
min_bound_size_multiplier = Vector2i(30, 16)
min_boundary_size = Vector2i(480, 256)
horizontal_size = Vector2i(560, 272)
vertical_size = Vector2i(976, 328)

[node name="up_loop" type="Area2D" parent="."]
position = Vector2(240, 264)
collision_layer = 2147483648
collision_mask = 2147483648

[node name="square" type="CollisionShape2D" parent="up_loop"]
visible = false
shape = SubResource("RectangleShape2D_3xc3k")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)

[node name="down_loop" type="Area2D" parent="."]
position = Vector2(240, -8)
collision_layer = 2147483648
collision_mask = 2147483648

[node name="square" type="CollisionShape2D" parent="down_loop"]
visible = false
shape = SubResource("RectangleShape2D_x4sw1")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)

[node name="right_loop" type="Area2D" parent="."]
position = Vector2(488, 128)
collision_layer = 2147483648
collision_mask = 2147483648

[node name="square" type="CollisionShape2D" parent="right_loop"]
visible = false
shape = SubResource("RectangleShape2D_pjes7")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)

[node name="left_loop" type="Area2D" parent="."]
position = Vector2(-8, 128)
collision_layer = 2147483648
collision_mask = 2147483648

[node name="square" type="CollisionShape2D" parent="left_loop"]
visible = false
shape = SubResource("RectangleShape2D_tonw3")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)

[node name="up_coll" type="StaticBody2D" parent="."]
position = Vector2(0, 272)

[node name="down_coll" type="StaticBody2D" parent="."]

[node name="right_coll" type="StaticBody2D" parent="."]
position = Vector2(480, 0)

[node name="left_coll" type="StaticBody2D" parent="."]

[node name="right_overshoot" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_pjes7")
offset_left = 480.0
offset_top = -160.0
offset_right = 752.0
offset_bottom = 416.0
texture = SubResource("PlaceholderTexture2D_x4sw1")

[node name="left_overshoot" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_x4sw1")
offset_left = -272.0
offset_top = -160.0
offset_bottom = 416.0
texture = SubResource("PlaceholderTexture2D_x4sw1")
